Update 'd8syuluir-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:54916db94dc865b07d9eaae111296fb5874ca06d@sha256:6314827755f13bf1e570f1687575e0ab05d2d80117bbfc3aa2ecfd544ef0e41f

--- a/components/d8syuluir-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/d8syuluir-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d8syuluir-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:54916db94dc865b07d9eaae111296fb5874ca06d@sha256:6314827755f13bf1e570f1687575e0ab05d2d80117bbfc3aa2ecfd544ef0e41f
+          name: container-image
